@@ -1,3 +1,8 @@
+2010-12-09  6.6.6-4 Anthony Thyssen <A.Thyssen@griffith...>
+  * Replace IsMagickColorSimilar() which provides the Fuzz Factor threshold
+    function.  Note function does not calculate 'distance' in total but
+    short-circuits when threshold is reached for faster processing.
+
 2010-12-07  6.6.6-4 Cristy  <quetzlzacatenango@image...>
   * Account for virtual canvas for the -flip / -flop options (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=1&t=17626).
